# ironlink

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/ppocrv5/: ch_ppocr_mobile_v2.0_cls_infer.onnx
src-tauri/src/: api.rs  commands.rs  config.rs  convert.rs  lib.rs  main.rs  models.rs  proxy.rs  sse.rs
src-tauri/src/api/: apps.rs  backend.rs  mod.rs  profiles.rs  status.rs
src-tauri/src/commands/: apps.rs  backend.rs  config.rs  mod.rs  models_cmd.rs  ocr.rs  profiles.rs  settings_cmd.rs  status.rs
src-tauri/src/config/: apps.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/models/: anthropic.rs  app.rs  chat.rs  mod.rs  model_info.rs  profile.rs  proxy_status.rs  responses.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/protocol/: convert.rs  mod.rs  tool_context.rs
src-tauri/src/protocol/core/: mod.rs  traits.rs  types.rs
src-tauri/src/protocol/input/: mod.rs  responses.rs
src-tauri/src/protocol/output/: anthropic.rs  chat.rs  mod.rs  responses.rs
src-tauri/src/protocol/reasoning/: mod.rs  styles.rs
src-tauri/src/protocol/sse/: anthropic_sse.rs  chat_sse.rs  mod.rs  parser.rs  transform.rs
src-tauri/src/protocol/tools/: apply_patch.rs  context.rs  mod.rs
src-tauri/src/proxy/: auth.rs  error.rs  mod.rs  ocr_interceptor.rs  routing.rs
src-tauri/src/resources/: gpt5_5_template.json
(+22 files in other folders)
